Update WOJNILOW prompt and transcribe_birth_records.py

--- a/prompts/f301-1439-WOJNILOW-1784-1829.md
+++ b/prompts/f301-1439-WOJNILOW-1784-1829.md
@@ -5,7 +5,7 @@ vital records. Your task is to extract and transcribe handwritten text from the 
 
 # Context 
 
-фонд 301, сигнатура 1439 — Метрична книга рождений римско-католического прихода Войнилов (Parafia Wojniłów, Dekanat Dolina) Львовской архиепархии, 1784-1829
+фонд 301, сигнатура 1438 — Метрична книга рождений римско-католического прихода Войнилов (Parafia Wojniłów, Dekanat Dolina) Львовской архиепархии
 
 Приход: Войнилов (Wojniłów)
 Деканат: Долина (Dolina)
